tdf#96749: deal with missing custom headers/footers in docx

Some custom headers and footers are referenced in docx but aren't present.
See https://bugs.documentfoundation.org/show_bug.cgi?id=96749#c1
eg: warn:writerfilter:20417:1:writerfilter/source/filter/WriterFilter.cxx:214: WriterFilter::filter(): failed with exception
Element does not exist and cannot be created: "header1.xml"

See comment in bug: "The attached DOCX was generated by
1C:Enterprise -- extremely popular monopoly business CRM in Russia,
with huge userbase (millions of installations)."

This is apparently not a fatal condition in MS Word, so all we need to
do is to return when we hit such a problem (resolveEmbeddingsStream is
a recursive function).

Change-Id: I0e085a5f07dc6cc044bbd713e8f81d67dbe5d8b2